[gd_scene load_steps=4 format=3 uid="uid://4wsghuk7i8ow"]

[ext_resource type="Script" path="res://multiplayer_template/menu/debug_menu/debug_sub_menus/client_debug_sub_menu.gd" id="1_q2diu"]
[ext_resource type="PackedScene" uid="uid://bkkvybflamla1" path="res://multiplayer_template/menu/debug_menu/debug_sub_menus/ip_option.tscn" id="2_ham3y"]
[ext_resource type="PackedScene" uid="uid://cenrsvhg8g7d2" path="res://multiplayer_template/menu/debug_menu/debug_sub_menus/lobby_option.tscn" id="3_em6vc"]

[node name="ClientDebugSubMenu" type="Control" node_paths=PackedStringArray("ip_line_edit", "option_holder", "lobby_option_display", "name_line_edit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q2diu")
ip_line_edit = NodePath("VBoxContainer/ManualIpInput/LineEdit")
option_holder = NodePath("VBoxContainer/ScrollContainer/IPDisplay")
ip_option_scene = ExtResource("2_ham3y")
lobby_option_scene = ExtResource("3_em6vc")
lobby_option_display = NodePath("VBoxContainer/ScrollContainer2/LobbyOptionDisplay")
name_line_edit = NodePath("VBoxContainer/ManualNameInput/LineEdit")
menu_name = "client"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ManualIpInput" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Header" type="Label" parent="VBoxContainer/ManualIpInput"]
layout_mode = 2
text = "Enter IP:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ManualIpInput"]
layout_mode = 2
text = "127.0.0.1"

[node name="Join" type="Button" parent="VBoxContainer/ManualIpInput"]
layout_mode = 2
text = "Join"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="IPDisplay" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ManualNameInput" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ManualNameInput"]
layout_mode = 2
text = "Enter Name:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ManualNameInput"]
layout_mode = 2
text = "Player"

[node name="PrintLobbyData" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Print Lobby Data"

[node name="ScrollContainer2" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="LobbyOptionDisplay" type="VBoxContainer" parent="VBoxContainer/ScrollContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/ManualIpInput/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/PrintLobbyData" to="." method="_on_print_lobby_data_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
